# GaussianSlicer

./: .gitignore  AGENT-PARITYLAB.md  AGENT-WGPU-Path.md  AGENTS.md  Cargo.toml  Package.swift  gs_wgsl_parity_patch.diff  tmp_test.rs
Sources/GaussianSlicer/: AppSettings.swift  ContentView.swift  GMMGenerator.swift  GaussianSlicerApp.swift  GaussianSplatPLY.swift  MetalRenderer.swift  RuntimeConfig.swift  Shaders.metal  VolumeExporter.swift
Tools/: CMakeLists.txt  README_WINDOWS.md  red_green_cycle.sh  run_parity_suite.sh  vcpkg.json  vdb_writer  vdb_writer.cpp
assets/examples/: gaussian_triplet.ply
crates/slicer_app/: Cargo.toml
crates/slicer_app/src/: main.rs
crates/slicer_core/: Cargo.toml
crates/slicer_core/src/: config.rs  gmm.rs  gpu.rs  lib.rs  metrics.rs  ply.rs
crates/slicer_gfx/: Cargo.toml
crates/slicer_gfx/src/: lib.rs
crates/slicer_shaders/: Cargo.toml
crates/slicer_shaders/src/: lib.rs
crates/slicer_shaders/src/kernels/: evaluation.wgsl  precalculate.wgsl  update_params.wgsl  visualize.wgsl
docs/: PARITY_LAB_NOTES.md  metal_to_wgsl_porting.md  wgsl_kernels.md  wgsl_parity_log.md
parity_lab/: Cargo.toml  README.md
parity_lab/cpu/: matrix.rs  mod.rs  scalars.rs  spd.rs
parity_lab/metal/: cholesky3_reference.metal
parity_lab/runner/: README.md
parity_lab/runner/metal/: Package.swift  README.md
parity_lab/runner/metal/.clang-module-cache/14N04EHG6J1U7/: SwiftShims-3NQPJMR94IEXI.pcm  _SwiftConcurrencyShims-3NQPJMR94IEXI.pcm
parity_lab/runner/metal/.clang-module-cache/2TMYAJXUHPJ82/: SwiftShims-3NQPJMR94IEXI.pcm  _SwiftConcurrencyShims-3NQPJMR94IEXI.pcm
parity_lab/runner/metal/.clang-module-cache/3H3G7ZME8UHBB/: SwiftShims-3NQPJMR94IEXI.pcm
parity_lab/runner/metal/Sources/ParityLabMetalRunner/: Shaders.metal  main.swift
parity_lab/src/: case_io.rs  lib.rs  main.rs  scalar_vector_gpu.rs  wgpu_matrix_runner.rs  wgpu_scalar_runner.rs  wgpu_spd_runner.rs  wgsl.rs
parity_lab/tests/: case_io.rs  scalars.rs
parity_lab/wgsl/: cholesky3_reference.wgsl  mat3_reference.wgsl  scalar_vector_reference.wgsl  spd3_reference.wgsl
scripts/: build_vdb_writer.sh  compare_cov_debug.py  compare_density.py  compare_dynamic.py  compare_volume_exports.py  parity_common.py  run_parity.sh
temp_colormap_gen/: colormaps_final.wgsl  colormaps_part1.wgsl  gen_colormaps.js  gen_colormaps_final.js  package-lock.json  package.json  visualize_bottom.wgsl
tmp/: density.raw  density_res256_50k.raw  dynamic.raw  dynamic_res256_50k.raw  gaussians.raw  gaussians_res512_50k.raw  kernel.raw  precalc.raw  precalc_debug.raw  rust_volume.mhd  rust_volume.raw  swift_volume.mhd  swift_volume.raw
tmp/parity_suite/: triplet_density.raw  triplet_dynamic.raw  triplet_precalc.raw  triplet_precalc_debug.raw
