[workspace]
members = [
    "crates/slicer_core",
    "crates/slicer_gfx",
    "crates/slicer_app",
    "crates/slicer_shaders",
    "parity_lab",
]

[workspace.package]
edition = "2021"
authors = ["Gaussian Slicer Port contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.25", features = ["bytemuck", "serde"] }
log = "0.4"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
wgpu = { version = "25.0.0", features = ["wgsl"] }
winit = "0.30.12"
egui = "0.32.3"
egui-winit = "0.32.3"
egui-wgpu = "0.32.3"
pollster = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "rayon"] }

[profile.dev]
debug = true

[profile.release]
debug = 1
