[package]
name = "slicer_shaders"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WGSL shader sources and helpers for Gaussian Slicer."

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
naga = { version = "25.0.1", features = ["wgsl-in"] }
